<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CommonForAllPartner.PartnerNotVerifiedPage"
    tools:showIn="@layout/app_bar_account_not_verified_page">

    <FrameLayout
        android:id="@+id/no_booking_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/home_parking" />

        </FrameLayout>

        <android.support.v7.widget.CardView
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_width="match_parent"
            android:layout_marginTop="88dp"
            app:cardCornerRadius="36dp"
            android:backgroundTint="@color/lignt_pink"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="16dp"
                    android:paddingBottom="12dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_pic"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginLeft="16dp"
                        android:padding="0dp"
                        android:src="@mipmap/female" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_toRightOf="@id/profile_pic"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_semi_bold"
                            android:text="Hi"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/name"
                            android:fontFamily="@font/montserrat_semi_bold"
                            android:text="@string/manilal_kasera"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_medium_regular"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/your_profile_"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/our_team_"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingBottom="24dp"
                    android:paddingTop="8dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"/>




            </LinearLayout>




        </android.support.v7.widget.CardView>


    </FrameLayout>

    <!--Bottom Navigation-->
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/home_bottom_nav"></android.support.design.widget.BottomNavigationView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_sm"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/sm"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="8dp"
        app:fabSize="auto" />

</FrameLayout>